finalizing some stuff

--- a/notebooks/modeling.ipynb
+++ b/notebooks/modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +25,10 @@
     "from sklearn.preprocessing  import StandardScaler\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.feature_selection import RFE\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "import joblib\n",
     "\n",
     "# Suppress warnings\n",
     "import warnings\n",
@@ -978,6 +982,71 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:\n",
+      "Best Parameters: {'logisticregression__C': 1, 'logisticregression__penalty': 'l2'}\n",
+      "Best Score: 0.8269363166953528\n",
+      "\n",
+      "Randomized Search:\n",
+      "Best Parameters: {'logisticregression__penalty': 'l2', 'logisticregression__C': 1}\n",
+      "Best Score: 0.8269363166953528\n"
+     ]
+    }
+   ],
+   "source": [
+    "# hyper parameter tuning with GridSearchCV\n",
+    "param_grid = {\n",
+    "    'logisticregression__penalty': ['l1', 'l2'],\n",
+    "    'logisticregression__C': [0.1, 1, 10]\n",
+    "}\n",
+    "\n",
+    "grid_search = GridSearchCV(model_lr, param_grid, cv=5)\n",
+    "grid_search.fit(x_train, y_train)\n",
+    "\n",
+    "print('Grid Search:')\n",
+    "print(\"Best Parameters:\", grid_search.best_params_)\n",
+    "print(\"Best Score:\", grid_search.best_score_)\n",
+    "\n",
+    "# hyper parameter tuning with RandomizedSearchCV\n",
+    "random_search = RandomizedSearchCV(model_lr, param_grid, cv=5, n_iter=10)\n",
+    "random_search.fit(x_train, y_train)\n",
+    "\n",
+    "print('\\nRandomized Search:')\n",
+    "print(\"Best Parameters:\", random_search.best_params_)\n",
+    "print(\"Best Score:\", random_search.best_score_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '.data/final_model.pkl'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[57], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Save Model\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mjoblib\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdump\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel_lr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m.data/final_model.pkl\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\ricdw\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\joblib\\numpy_pickle.py:552\u001b[0m, in \u001b[0;36mdump\u001b[1;34m(value, filename, compress, protocol, cache_size)\u001b[0m\n\u001b[0;32m    550\u001b[0m         NumpyPickler(f, protocol\u001b[38;5;241m=\u001b[39mprotocol)\u001b[38;5;241m.\u001b[39mdump(value)\n\u001b[0;32m    551\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m is_filename:\n\u001b[1;32m--> 552\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(filename, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwb\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m    553\u001b[0m         NumpyPickler(f, protocol\u001b[38;5;241m=\u001b[39mprotocol)\u001b[38;5;241m.\u001b[39mdump(value)\n\u001b[0;32m    554\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '.data/final_model.pkl'"
+     ]
+    }
+   ],
+   "source": [
+    "# Save Model\n",
+    "joblib.dump(model_lr, '.data/final_model.pkl')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -986,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1001,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1017,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1456,7 +1525,7 @@
        "                ('logisticregression', LogisticRegression())])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1476,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1498,7 +1567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1508,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1547,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1579,6 +1648,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:\n",
+      "Best Parameters: {'logisticregression__C': 0.1, 'logisticregression__penalty': 'l2'}\n",
+      "Best Score: 0.8293459552495698\n",
+      "\n",
+      "Randomized Search:\n",
+      "Best Parameters: {'logisticregression__penalty': 'l2', 'logisticregression__C': 1}\n",
+      "Best Score: 0.8269363166953528\n"
+     ]
+    }
+   ],
+   "source": [
+    "# hyper parameter tuning with GridSearchCV\n",
+    "param_grid = {\n",
+    "    'logisticregression__penalty': ['l1', 'l2'],\n",
+    "    'logisticregression__C': [0.1, 1, 10]\n",
+    "}\n",
+    "\n",
+    "grid_search = GridSearchCV(model_t1, param_grid, cv=5)\n",
+    "grid_search.fit(x_train, y_train)\n",
+    "\n",
+    "print('Grid Search:')\n",
+    "print(\"Best Parameters:\", grid_search.best_params_)\n",
+    "print(\"Best Score:\", grid_search.best_score_)\n",
+    "\n",
+    "# hyper parameter tuning with RandomizedSearchCV\n",
+    "random_search = RandomizedSearchCV(model_lr, param_grid, cv=5, n_iter=10)\n",
+    "random_search.fit(x_train, y_train)\n",
+    "\n",
+    "print('\\nRandomized Search:')\n",
+    "print(\"Best Parameters:\", random_search.best_params_)\n",
+    "print(\"Best Score:\", random_search.best_score_)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1587,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2023,7 +2134,7 @@
        "                ('logisticregression', LogisticRegression(max_iter=1000))])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2040,7 +2151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2080,7 +2191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2112,6 +2223,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:\n",
+      "Best Parameters: {'logisticregression__C': 0.1, 'logisticregression__penalty': 'l2'}\n",
+      "Best Score: 0.8293459552495698\n",
+      "\n",
+      "Randomized Search:\n",
+      "Best Parameters: {'logisticregression__penalty': 'l2', 'logisticregression__C': 1}\n",
+      "Best Score: 0.8269363166953528\n"
+     ]
+    }
+   ],
+   "source": [
+    "# hyper parameter tuning with GridSearchCV\n",
+    "param_grid = {\n",
+    "    'logisticregression__penalty': ['l1', 'l2'],\n",
+    "    'logisticregression__C': [0.1, 1, 10]\n",
+    "}\n",
+    "\n",
+    "grid_search = GridSearchCV(model_t2, param_grid, cv=5)\n",
+    "grid_search.fit(x_train, y_train)\n",
+    "\n",
+    "print('Grid Search:')\n",
+    "print(\"Best Parameters:\", grid_search.best_params_)\n",
+    "print(\"Best Score:\", grid_search.best_score_)\n",
+    "\n",
+    "# hyper parameter tuning with RandomizedSearchCV\n",
+    "random_search = RandomizedSearchCV(model_lr, param_grid, cv=5, n_iter=10)\n",
+    "random_search.fit(x_train, y_train)\n",
+    "\n",
+    "print('\\nRandomized Search:')\n",
+    "print(\"Best Parameters:\", random_search.best_params_)\n",
+    "print(\"Best Score:\", random_search.best_score_)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2120,7 +2273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2556,7 +2709,7 @@
        "                ('logisticregression', LogisticRegression(max_iter=1000))])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2573,7 +2726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2613,7 +2766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2645,6 +2798,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:\n",
+      "Best Parameters: {'logisticregression__C': 0.1, 'logisticregression__penalty': 'l2'}\n",
+      "Best Score: 0.7019219736087206\n",
+      "\n",
+      "Randomized Search:\n",
+      "Best Parameters: {'logisticregression__penalty': 'l2', 'logisticregression__C': 1}\n",
+      "Best Score: 0.8269363166953528\n"
+     ]
+    }
+   ],
+   "source": [
+    "# hyper parameter tuning with GridSearchCV\n",
+    "param_grid = {\n",
+    "    'logisticregression__penalty': ['l1', 'l2'],\n",
+    "    'logisticregression__C': [0.1, 1, 10]\n",
+    "}\n",
+    "\n",
+    "grid_search = GridSearchCV(model_t3, param_grid, cv=5)\n",
+    "grid_search.fit(x_train, y_train)\n",
+    "\n",
+    "print('Grid Search:')\n",
+    "print(\"Best Parameters:\", grid_search.best_params_)\n",
+    "print(\"Best Score:\", grid_search.best_score_)\n",
+    "\n",
+    "# hyper parameter tuning with RandomizedSearchCV\n",
+    "random_search = RandomizedSearchCV(model_lr, param_grid, cv=5, n_iter=10)\n",
+    "random_search.fit(x_train, y_train)\n",
+    "\n",
+    "print('\\nRandomized Search:')\n",
+    "print(\"Best Parameters:\", random_search.best_params_)\n",
+    "print(\"Best Score:\", random_search.best_score_)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2653,7 +2848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -3095,7 +3290,7 @@
        "                ('logisticregression', LogisticRegression(max_iter=1000))])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3112,7 +3307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -3134,7 +3329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -3174,7 +3369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -3206,6 +3401,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:\n",
+      "Best Parameters: {'logisticregression__C': 1, 'logisticregression__penalty': 'l2'}\n",
+      "Best Score: 0.8269363166953528\n",
+      "\n",
+      "Randomized Search:\n",
+      "Best Parameters: {'logisticregression__penalty': 'l2', 'logisticregression__C': 1}\n",
+      "Best Score: 0.8269363166953528\n"
+     ]
+    }
+   ],
+   "source": [
+    "# hyper parameter tuning with GridSearchCV\n",
+    "param_grid = {\n",
+    "    'logisticregression__penalty': ['l1', 'l2'],\n",
+    "    'logisticregression__C': [0.1, 1, 10]\n",
+    "}\n",
+    "\n",
+    "grid_search = GridSearchCV(model_t4, param_grid, cv=5)\n",
+    "grid_search.fit(x_train, y_train)\n",
+    "\n",
+    "print('Grid Search:')\n",
+    "print(\"Best Parameters:\", grid_search.best_params_)\n",
+    "print(\"Best Score:\", grid_search.best_score_)\n",
+    "\n",
+    "# hyper parameter tuning with RandomizedSearchCV\n",
+    "random_search = RandomizedSearchCV(model_lr, param_grid, cv=5, n_iter=10)\n",
+    "random_search.fit(x_train, y_train)\n",
+    "\n",
+    "print('\\nRandomized Search:')\n",
+    "print(\"Best Parameters:\", random_search.best_params_)\n",
+    "print(\"Best Score:\", random_search.best_score_)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3214,7 +3451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -3652,7 +3889,7 @@
        "             scoring='f1_macro')"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3676,24 +3913,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "F1 score:  0.7651812240047534\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_pred = grid_search.predict(x_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -3732,7 +3961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -3764,7 +3993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -3785,7 +4014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -3799,6 +4028,32 @@
    "source": [
     "y_pred = grid_search.best_estimator_.predict(x_test)\n",
     "print(\"F1 score: \", f1_score(y_test, y_pred, average='macro'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Randomized Search:\n",
+      "Best Parameters: {'logisticregression__penalty': 'l2', 'logisticregression__C': 1}\n",
+      "Best Score: 0.8269363166953528\n"
+     ]
+    }
+   ],
+   "source": [
+    "# hyper parameter tuning with RandomizedSearchCV\n",
+    "random_search = RandomizedSearchCV(model_lr, param_grid, cv=5, n_iter=10)\n",
+    "random_search.fit(x_train, y_train)\n",
+    "\n",
+    "print('\\nRandomized Search:')\n",
+    "print(\"Best Parameters:\", random_search.best_params_)\n",
+    "print(\"Best Score:\", random_search.best_score_)"
    ]
   },
   {
