--- a/notebooks/app.ipynb
+++ b/notebooks/app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "id": "4c3d685b",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
        "4         Urban           Y  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
     "import joblib\n",
     "\n",
     "# Load the data\n",
-    "df = pd.read_csv('./data/prepared_data.csv') \n",
+    "df = pd.read_csv('../data/prepared_data.csv') \n",
     "#df = df.drop(columns=['Loan_Status'],inplace=False)\n",
     "#model = joblib.load(\"final_model.sav\")  \n",
     "#model.predict()\n",
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "2d81ac4a-1c28-44a7-b505-af765617cdd7",
    "metadata": {
     "tags": []
@@ -191,7 +191,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x238a5d3f590>"
+       "<IPython.lib.display.IFrame at 0x204c5cb00d0>"
       ]
      },
      "metadata": {},
@@ -201,30 +201,109 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---------------------------------------------------------------------------\n",
-      "TypeError                                 Traceback (most recent call last)\n",
-      "TypeError: predict_loan_approval() missing 1 required positional argument: 'property_area'\n",
-      "\n",
-      "---------------------------------------------------------------------------\n",
-      "TypeError                                 Traceback (most recent call last)\n",
-      "TypeError: predict_loan_approval() missing 1 required positional argument: 'property_area'\n",
-      "\n"
+      "Gender: Male\n",
+      "Married: Yes\n",
+      "Dependents: 0\n",
+      "Education: Graduate\n",
+      "Self Employed: No\n",
+      "Applicant Income: 0\n",
+      "Coapplicant Income: 0\n",
+      "Loan Amount: 0\n",
+      "Loan Amount Term: 0\n",
+      "Credit History: 1\n",
+      "Property Area: Urban\n",
+      "Gender: Male\n",
+      "Married: Yes\n",
+      "Dependents: None\n",
+      "Education: Graduate\n",
+      "Self Employed: No\n",
+      "Applicant Income: 0\n",
+      "Coapplicant Income: 0\n",
+      "Loan Amount: 0\n",
+      "Loan Amount Term: 0\n",
+      "Credit History: 1\n",
+      "Property Area: Urban\n",
+      "Gender: Male\n",
+      "Married: Yes\n",
+      "Dependents: None\n",
+      "Education: Graduate\n",
+      "Self Employed: No\n",
+      "Applicant Income: 0\n",
+      "Coapplicant Income: 0\n",
+      "Loan Amount: 0\n",
+      "Loan Amount Term: 0\n",
+      "Credit History: 1\n",
+      "Property Area: Urban\n",
+      "Gender: Male\n",
+      "Married: Yes\n",
+      "Dependents: None\n",
+      "Education: Graduate\n",
+      "Self Employed: No\n",
+      "Applicant Income: 0\n",
+      "Coapplicant Income: 0\n",
+      "Loan Amount: 0\n",
+      "Loan Amount Term: 0\n",
+      "Credit History: 1\n",
+      "Property Area: Urban\n",
+      "Gender: Male\n",
+      "Married: Yes\n",
+      "Dependents: None\n",
+      "Education: Graduate\n",
+      "Self Employed: No\n",
+      "Applicant Income: 0\n",
+      "Coapplicant Income: 0\n",
+      "Loan Amount: 0\n",
+      "Loan Amount Term: 0\n",
+      "Credit History: 1\n",
+      "Property Area: Urban\n",
+      "Gender: Male\n",
+      "Married: Yes\n",
+      "Dependents: None\n",
+      "Education: Graduate\n",
+      "Self Employed: No\n",
+      "Applicant Income: 0\n",
+      "Coapplicant Income: 0\n",
+      "Loan Amount: 0\n",
+      "Loan Amount Term: 0\n",
+      "Credit History: 1\n",
+      "Property Area: Urban\n",
+      "Gender: Male\n",
+      "Married: Yes\n",
+      "Dependents: None\n",
+      "Education: Graduate\n",
+      "Self Employed: No\n",
+      "Applicant Income: 0\n",
+      "Coapplicant Income: 0\n",
+      "Loan Amount: 0\n",
+      "Loan Amount Term: 0\n",
+      "Credit History: 1\n",
+      "Property Area: Urban\n",
+      "Gender: Male\n",
+      "Married: Yes\n",
+      "Dependents: 2\n",
+      "Education: Graduate\n",
+      "Self Employed: No\n",
+      "Applicant Income: 0\n",
+      "Coapplicant Income: 0\n",
+      "Loan Amount: 0\n",
+      "Loan Amount Term: 0\n",
+      "Credit History: 1\n",
+      "Property Area: Urban\n",
+      "Gender: Male\n",
+      "Married: Yes\n",
+      "Dependents: 2\n",
+      "Education: Graduate\n",
+      "Self Employed: No\n",
+      "Applicant Income: 1\n",
+      "Coapplicant Income: 0\n",
+      "Loan Amount: 5000\n",
+      "Loan Amount Term: 2\n",
+      "Credit History: 1\n",
+      "Property Area: Urban\n"
      ]
     }
    ],
    "source": [
-    "# Import necessary libraries\n",
-    "import pandas as pd\n",
-    "import dash\n",
-    "from dash import dcc, html\n",
-    "from dash.dependencies import Input, Output\n",
-    "from category_encoders import OneHotEncoder\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "import joblib\n",
-    "\n",
-    "# Load the data\n",
-    "df = pd.read_csv('./data/prepared_data.csv')\n",
-    "\n",
     "# Initialize the Dash app\n",
     "app = dash.Dash(__name__)\n",
     "\n",
@@ -309,6 +388,14 @@
     "        ),\n",
     "    ]),\n",
     "    html.Div(style={'marginBottom': '20px'}, children=[\n",
+    "        html.Label('Loan Amount: ', style={'color': colors['text']}),\n",
+    "        dcc.Input(\n",
+    "            id='loan-amount-input',\n",
+    "            type='number',\n",
+    "            value=0\n",
+    "        ),\n",
+    "    ]),\n",
+    "    html.Div(style={'marginBottom': '20px'}, children=[\n",
     "        html.Label('Loan Amount Term: ', style={'color': colors['text']}),\n",
     "        dcc.Input(\n",
     "            id='loan-amount-term-input',\n",
@@ -321,7 +408,7 @@
     "        dcc.Dropdown(\n",
     "            id='credit-history-dropdown',\n",
     "            options=options_credit_history,\n",
-    "            value='Yes'\n",
+    "            value=1\n",
     "        ),\n",
     "    ]),\n",
     "    html.Div(style={'marginBottom': '20px'}, children=[\n",
@@ -340,7 +427,7 @@
     "\n",
     "\n",
     "# Load Model\n",
-    "model = joblib.load('final_model.sav')\n",
+    "model = joblib.load('../artifacts/final_model.sav')\n",
     "\n",
     "# Define callback function to handle user input and generate prediction\n",
     "@app.callback(\n",
@@ -352,7 +439,8 @@
     "     dash.dependencies.State('education-dropdown', 'value'),\n",
     "     dash.dependencies.State('self-employed-dropdown', 'value'),\n",
     "     dash.dependencies.State('applicant-income-input', 'value'),\n",
-    "     dash.dependencies.State('coapplicant-income-input', 'value'),     \n",
+    "     dash.dependencies.State('coapplicant-income-input', 'value'),\n",
+    "     dash.dependencies.State('loan-amount-input', 'value'),     \n",
     "     dash.dependencies.State('loan-amount-term-input', 'value'),         \n",
     "     dash.dependencies.State('credit-history-dropdown', 'value'),\n",
     "     dash.dependencies.State('property-area-dropdown', 'value')]\n",
@@ -383,13 +471,10 @@
     "        'Credit_History': [credit_history],\n",
     "        'Property_Area': [property_area]\n",
     "    })\n",
-    "        \n",
-    "    # Encode the input data using the same encoder used for training\n",
-    "    #encoded_input = ohe.transform(input_data)\n",
     "    \n",
     "    # Make predictions\n",
     "    prediction = model.predict(input_data)\n",
-    "    prediction_result = 'Approved' if prediction[0] == 1 else 'Rejected'\n",
+    "    prediction_result = 'Approved' if prediction[0] == \"Y\" else 'Rejected'\n",
     "    return f\"Prediction: {prediction_result}\"\n",
     "\n",
     "\n",
@@ -423,7 +508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
